--- a/test1_.html
+++ b/test1_.html
@@ -328,11 +328,11 @@
       {
         id: 'horridon', name: "Horridon", enc: 51575,
         tips: [
-          'Shadow Word: Pain small adds, SW:P and VT marked elite adds',
-          'SW:P and VT Direhorn Spirit for <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=138156/item-priest-t15-shadow-2p-bonus">T15 knockback bonus</a>',
+          '<a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=589/shadow-word-pain">Shadow Word: Pain</a> small adds, <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=589/shadow-word-pain">SW:P</a> and <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=34914/vampiric-touch">VT</a> marked elite adds',
+          '<a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=589/shadow-word-pain">SW:P</a> and <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=34914/vampiric-touch">VT</a> Direhorn Spirit for <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=138156/item-priest-t15-shadow-2p-bonus">T15 2pc knockback bonus</a>',
           '<a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=48045/mind-sear">Mind Sear</a> when adds are stacked together',
-          'Multidot focus for high uptime on <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=109142/twist-of-fate">Twist of Fate</a> and Shadow Orbs',
-          'Use Devouring Plague and <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=138158/item-priest-t15-shadow-4p-bonus">Mind Flay: Insanity</a> on Horridon',
+          'Multidot focus for high uptime on <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=109142/twist-of-fate">Twist of Fate</a> and <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=95740/shadow-orbs">Shadow Orbs</a>',
+          'Use <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=2944/devouring-plague">Devouring Plague</a> and <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=129197/mind-flay-insanity">Mind Flay: Insanity</a> on Horridon',
           'Ignore War-God Jalak, and use <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=15290/vampiric-embrace">Vampiric Embrace</a> during a dangerous <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=136817/bestial-cry">Bestial Cry</a>'
         ]
       },
@@ -346,8 +346,8 @@
       {
         id: 'tortos', name: "Tortos", enc: 51565,
         tips: [
-          'Cast SW:P and SW:D on adds for <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=109142/twist-of-fate">Twist of Fate</a> uptime and Shadow Orbs',
-          'Maintain SW:P on a Humming Crystal',
+          'Cast <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=589/shadow-word-pain">SW:P</a> and <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=32379/shadow-word-death">SW:D</a> on adds for <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=109142/twist-of-fate">Twist of Fate</a> uptime and <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=95740/shadow-orbs">Shadow Orbs</a>',
+          'Maintain <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=589/shadow-word-pain">SW:P</a> on a Humming Crystal',
           'Spread out to avoid Whirl Turtles'
         ]
       },
@@ -355,7 +355,7 @@
         id: 'megaera', name: "Megaera", enc: 51578,
         tips: [
           'Ignore Venomous Head',
-          'SW:D Nether Wyrm\'s for Shadow Orbs',
+          '<a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=32379/shadow-word-death">SW:D</a> Nether Wyrms for <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=95740/shadow-orbs">Shadow Orbs</a>',
           'Consider <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=122128/divine-star">Divine Star</a> if the raid needs more healing'
         ]
       },
@@ -363,24 +363,24 @@
         id: 'jikun', name: "Ji-Kun", enc: 51573,
         tips: [
           'Use a feather charge (extra action button) to intercept Feed Young and gain <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=112879/primal-nutriment">Primal Nutriment</a>',
-          'SW:P and VT Nest Guardian',
-          '<a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=48045/mind-sear">Mind Sear</a> and SW:D Hatchlings',
-          'VE if needed during Quills',
+          '<a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=589/shadow-word-pain">SW:P</a> and <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=34914/vampiric-touch">VT</a> Nest Guardian',
+          '<a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=48045/mind-sear">Mind Sear</a> and <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=32379/shadow-word-death">SW:D</a> Hatchlings',
+          '<a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=15290/vampiric-embrace">VE</a> if needed during Quills',
           'Pray your Fire Mages are good'
         ]
       },
       {
         id: 'durumu', name: "Durumu the Forgotten", enc: 51572,
         tips: [
-          'SW:P and SW:D the adds in the fog for <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=109142/twist-of-fate">Twist of Fate</a> and Shadow Orbs',
-          'Time <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=120644/halo">Halo</a> and use SW:P and VT on the Ice Walls',
+          '<a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=589/shadow-word-pain">SW:P</a> and <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=32379/shadow-word-death">SW:D</a> the adds in the fog for <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=109142/twist-of-fate">Twist of Fate</a> and <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=95740/shadow-orbs">Shadow Orbs</a>',
+          'Time <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=120644/halo">Halo</a> and use <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=589/shadow-word-pain">SW:P</a> and <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=34914/vampiric-touch">VT</a> on the Ice Walls',
           '2nd pot with 2nd <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=26297/berserking">Berserking</a>'
         ]
       },
       {
         id: 'primordius', name: "Primordius", enc: 51574,
         tips: [
-          'SW:P and VT all the Living Fluids (Focus boss instead if multiple Affliction Warlocks)',
+          '<a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=589/shadow-word-pain">SW:P</a> and <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=34914/vampiric-touch">VT</a> all the Living Fluids (Focus boss instead if multiple Affliction Warlocks)',
           '<a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=127632/cascade">Cascade</a> on CD',
           'Position camera to dodge moving puddles and debuffs'
         ]
@@ -388,15 +388,15 @@
       {
         id: 'darkanimus', name: "Dark Animus", enc: 51576,
         tips: [
-          'SW:P and VT all the Anima Golems for <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=109142/twist-of-fate">Twist of Fate</a> and Shadow Orbs',
+          '<a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=589/shadow-word-pain">SW:P</a> and <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=34914/vampiric-touch">VT</a> all the Anima Golems for <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=109142/twist-of-fate">Twist of Fate</a> and <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=95740/shadow-orbs">Shadow Orbs</a>',
           '<a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=127632/cascade">Cascade</a> on CD',
-          'Use Devouring Plague and <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=138158/item-priest-t15-shadow-4p-bonus">Mind Flay: Insanity</a> on Dark Animus'
+          'Use <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=2944/devouring-plague">Devouring Plague</a> and <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=129197/mind-flay-insanity">Mind Flay: Insanity</a> on Dark Animus'
         ]
       },
       {
         id: 'ironqon', name: "Iron Qon", enc: 51559,
         tips: [
-          'SW:P and VT Iron Qon when he becomes available between each Quillen (Ro\'shak → Quet\'zal → Dam\'ren)',
+          '<a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=589/shadow-word-pain">SW:P</a> and <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=34914/vampiric-touch">VT</a> Iron Qon when he becomes available between each Quillen (Ro\'shak → Quet\'zal → Dam\'ren)',
           'Use CDs and 2nd pot in the final phase, with all 4 targets up',
           'Use <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=15290/vampiric-embrace">Vampiric Embrace</a> during a dangerous Fist Smash'
         ]
@@ -404,25 +404,25 @@
       {
         id: 'consorts', name: "Twin Empyreans", enc: 51560,
         tips: [
-          'Precast VT on Suen, then SW:P before they disappear',
-          'Recast SW:P and VT on Suen during Tears of the Sun',
+          'Precast <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=34914/vampiric-touch">VT</a> on Suen, then <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=589/shadow-word-pain">SW:P</a> before they disappear',
+          'Recast <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=589/shadow-word-pain">SW:P</a> and <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=34914/vampiric-touch">VT</a> on Suen during Tears of the Sun',
           'Help heal during Nuclear Inferno (Boss is immune)',
-          'VE during high stacks of Blazing Radiance'
+          '<a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=15290/vampiric-embrace">VE</a> during high stacks of Blazing Radiance'
         ]
       },
       {
         id: 'leishen', name: "Lei Shen", enc: 51579,
         tips: [
-          'Save 2nd <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=26297/berserking">Berserking</a>, and use <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=120644/halo">Halo</a> when Ball Lightning\'s spawn followed by <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=48045/mind-sear">Mind Sear</a>',
-          'SW:P and SW:D adds for <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=109142/twist-of-fate">Twist of Fate</a> and Shadow Orbs',
+          'Save 2nd <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=26297/berserking">Berserking</a>, and use <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=120644/halo">Halo</a> when Ball Lightnings spawn followed by <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=48045/mind-sear">Mind Sear</a>',
+          '<a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=589/shadow-word-pain">SW:P</a> and <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=32379/shadow-word-death">SW:D</a> adds for <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=109142/twist-of-fate">Twist of Fate</a> and <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=95740/shadow-orbs">Shadow Orbs</a>',
           'Save 3rd <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=26297/berserking">Berserking</a> and 2nd Pot for Bloodlust'
         ]
       },
       {
         id: 'raden', name: "Ra-den", enc: 51580,
         tips: [
-          'VT and SWP the Cracking Stalker, then <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=122128/divine-star">Divine Star</a> and SW:D',
-          'SW:D the first Essence of Anima, DP and MF: I the rest',
+          '<a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=34914/vampiric-touch">VT</a> and <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=589/shadow-word-pain">SW:P</a> the Crackling Stalker, then <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=122128/divine-star">Divine Star</a> and <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=32379/shadow-word-death">SW:D</a>',
+          '<a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=32379/shadow-word-death">SW:D</a> the first Essence of Anima, <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=2944/devouring-plague">DP</a> and <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=129197/mind-flay-insanity">MF: I</a> the rest',
           'At 40% use <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=122128/divine-star">Divine Star</a> on CD to help healers',
           'Use 2nd pot / CDs and focus boss'
         ]
