--- a/test1_.html
+++ b/test1_.html
@@ -338,8 +338,8 @@ var bosses = [
     id: 'council', name: "Council of Elders", enc: 51570,
     tips: [
       'Stack in melee so you can hit multiple targets with <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=122128/divine-star">Divine Star</a> on cooldown.',
-      'Keep DoTs rolling on all bosses and fill with <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=48045/mind-sear">Mind Sear</a>.'
-      'Recast DoTs when <a class="wowhead" href="https://www.wowhead.com/mop-classic/item=96558/unerring-vision-of-lei-shen">Unerring Vision of Lei Shen</a> procs/'
+      'Keep DoTs rolling on all bosses and fill with <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=48045/mind-sear">Mind Sear</a>.',
+      'Recast DoTs when <a class="wowhead" href="https://www.wowhead.com/mop-classic/item=96558/unerring-vision-of-lei-shen">Unerring Vision of Lei Shen</a> procs.'
     ]
   },
   {
@@ -377,7 +377,7 @@ var bosses = [
   {
     id: 'primordius', name: "Primordius", enc: 51574,
     tips: [
-      'Keep DoTs on all Living Fluids (unless your Warlocks know how to play Affliction.',
+      'Keep DoTs on all Living Fluids (unless your Warlocks know how to play Affliction).',
       'Use <a class="wowhead" href="https://www.wowhead.com/mop-classic/spell=127632/cascade">Cascade</a> on cooldown.',
       'Adjust your camera angle to help dodge puddles and avoid unwanted debuffs.'
     ]
